cleaned html files

--- a/html/activities/index.html
+++ b/html/activities/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar">
       <div class="navbar-brand">
         <img class="navbar-brand-logo" src="../../images/logo.png" alt="Web application logo">
-        <h1 class="navbar-brand-text">Church</h1>
+        <h1 class="navbar-brand-text">Catholic Church Complex</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -71,15 +71,15 @@
         </div>
       </div>
 
-      <form class="search-field" action="index.html" method="post">
-        <input class="input search" type="search" name="" value="" placeholder="Search here...">
-        <button class="btn btn-search" type="submit" name="search-btn">
+      <form class="search-field" method="post">
+        <input class="input search" type="search" placeholder="Search here...">
+        <button class="btn btn-search" type="button" name="search-btn">
           <i class="fa-solid fa-magnifying-glass icon"></i>
         </button>
       </form>
     </div>
 
-    <form class="table-container" action="index.html" method="post" id="table-form">
+    <form class="table-container" method="post" id="table-form">
       <table class="table">
         <thead class="table-header">
           <tr>
