--- a/html/events/details/baptismal.html
+++ b/html/events/details/baptismal.html
@@ -24,7 +24,7 @@
     <nav class="navbar">
       <div class="navbar-brand">
         <img class="navbar-brand-logo" src="../../../images/logo.png" alt="Web application logo">
-        <h1 class="navbar-brand-text">Church</h1>
+        <h1 class="navbar-brand-text">Catholic Church Complex</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -54,246 +54,244 @@
       </div>
     </header>
 
-    <form method="post" id="baptismalDetails">
-      <div class="row-flex">
-        <span class="col-9">
-          <label for="">Church Name</label>
-          <input class="input" type="text">
-        </span>
+    <div class="row-flex">
+      <span class="col-9">
+        <label for="">Church Name</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-3">
-          <label for="">Registry No.</label>
-          <input class="input" type="text">
-        </span>
+      <span class="col-3">
+        <label for="">Registry No.</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-9">
-          <label for="">Location</label>
-          <input class="input" type="text" name="" value="" placeholder="">
-        </span>
+      <span class="col-9">
+        <label for="">Location</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-3">
-          <label for="">Date</label>
-          <input class="input" type="date" name="" value="" placeholder="">
-        </span>
+      <span class="col-3">
+        <label for="">Date</label>
+        <input class="input" type="date" disabled>
+      </span>
 
-        <span class="col-6">
-          <label for="">Organizer</label>
-          <input class="input" type="text">
-        </span>
+      <span class="col-6">
+        <label for="">Organizer</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-3">
-          <label for="">Contact No.</label>
-          <input class="input" type="text">
-        </span>
+      <span class="col-3">
+        <label for="">Contact No.</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-3">
-          <label for="">Time</label>
-          <input class="input" type="time">
-        </span>
+      <span class="col-3">
+        <label for="">Time</label>
+        <input class="input" type="time" disabled>
+      </span>
+    </div>
+
+    <hr>
+
+    <h3 class="heading3">Child</h3>
+
+    <div class="row-flex">
+      <span class="col-6">
+        <label for="">Name</label>
+        <input class="input" type="text" disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Age</label>
+        <input class="input" type="number" disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Birthdate</label>
+        <input class="input" type="date" disabled>
+      </span>
+
+      <span class="col-9">
+        <label for="">Birthplace</label>
+        <input class="input" type="text" disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Religion</label>
+        <input class="input" type="text"disabled>
+      </span>
+
+      <span class="col-9">
+        <label for="">Address</label>
+        <input class="input" type="text"disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Citizenship</label>
+        <input class="input" type="text" disabled>
+      </span>
+    </div>
+
+    <h3 class="heading3">Guardian</h3>
+
+    <div class="row-flex">
+      <span class="col-9">
+        <label for="">Name</label>
+        <input class="input" type="text" disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Contact No.</label>
+        <input class="input" type="number" disabled>
+      </span>
+
+      <span class="col-9">
+        <label for="">Address</label>
+        <input class="input" type="text" disabled>
+      </span>
+    </div>
+
+    <h3 class="heading3">Mother</h3>
+
+    <div class="row-flex">
+      <span class="col-6">
+        <label for="">Name</label>
+        <input class="input" type="text" disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Telephone No.</label>
+        <input class="input" type="number" disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Occupation</label>
+        <input class="input" type="text" disabled>
+      </span>
+
+      <span class="col-6">
+        <label for="">Birthplace</label>
+        <input class="input" type="text" disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Birthdate</label>
+        <input class="input" type="date" disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Religion</label>
+        <input class="input" type="text" disabled>
+      </span>
+
+      <span class="col-9">
+        <label for="">Address</label>
+        <input class="input" type="text" disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Citizenship</label>
+        <input class="input" type="text" disabled>
+      </span>
+    </div>
+
+    <h3 class="heading3">Father</h3>
+
+    <div class="row-flex">
+      <span class="col-6">
+        <label for="">Name</label>
+        <input class="input" type="text" disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Telephone No.</label>
+        <input class="input" type="number" disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Occupation</label>
+        <input class="input" type="text" disabled>
+      </span>
+
+      <span class="col-6">
+        <label for="">Birthplace</label>
+        <input class="input" type="text" disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Birthdate</label>
+        <input class="input" type="date" disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Religion</label>
+        <input class="input" type="text" disabled>
+      </span>
+
+      <span class="col-9">
+        <label for="">Address</label>
+        <input class="input" type="text" disabled>
+      </span>
+
+      <span class="col-3">
+        <label for="">Citizenship</label>
+        <input class="input" type="text" disabled>
+      </span>
+    </div>
+
+    <div class="center-horizontal col-4">
+      <label for="">Date of Marriage</label>
+      <input class="input" type="date" disabled>
+    </div>
+
+    <div class="sponsor">
+      <h3 class="heading2">Sponsors</h3>
+
+      <h4 class="heading3">Main Sponsor</h4>
+      <div class="row">
+
+        <div class="sponsor-form">
+          <h5 class="heading4">Male Sponsor</h5>
+          <label for="name">Name</label>
+          <input class="input" type="text" id="name">
+        </div>
+
+        <div class="sponsor-form">
+          <h5 class="heading4">Female Sponsor</h5>
+          <label for="name">Name</label>
+          <input class="input" type="text" id="name">
+        </div>
       </div>
 
       <hr>
 
-      <h3 class="heading3">Child</h3>
+      <h4 class="heading3">Other Sponsors</h4>
 
-      <div class="row-flex">
-        <span class="col-6">
+      <div class="row">
+        <div class="sponsor-form">
           <label for="">Name</label>
-          <input class="input" type="text" placeholder="Surname, Firstname M.I">
-        </span>
-
-        <span class="col-3">
-          <label for="">Age</label>
-          <input class="input" type="number">
-        </span>
-
-        <span class="col-3">
-          <label for="">Birthdate</label>
-          <input class="input" type="date">
-        </span>
-
-        <span class="col-9">
-          <label for="">Birthplace</label>
-          <input class="input" type="text" name="" value="" placeholder="">
-        </span>
-
-        <span class="col-3">
-          <label for="">Religion</label>
-          <input class="input" type="text">
-        </span>
-
-        <span class="col-9">
-          <label for="">Address</label>
-          <input class="input" type="text">
-        </span>
-
-        <span class="col-3">
-          <label for="">Citizenship</label>
-          <input class="input" type="text">
-        </span>
-      </div>
-
-      <h3 class="heading3">Guardian</h3>
-
-      <div class="row-flex">
-        <span class="col-9">
+          <input class="input" type="text" disabled>
           <label for="">Name</label>
-          <input class="input" type="text" placeholder="Surname, Firstname M.I">
-        </span>
-
-        <span class="col-3">
-          <label for="">Contact No.</label>
-          <input class="input" type="number">
-        </span>
-
-        <span class="col-9">
-          <label for="">Address</label>
-          <input class="input" type="text">
-        </span>
-      </div>
-
-      <h3 class="heading3">Mother</h3>
-
-      <div class="row-flex">
-        <span class="col-6">
+          <input class="input" type="text" disabled>
           <label for="">Name</label>
-          <input class="input" type="text" placeholder="Surname, Firstname M.I">
-        </span>
-
-        <span class="col-3">
-          <label for="">Telephone No.</label>
-          <input class="input" type="number">
-        </span>
-
-        <span class="col-3">
-          <label for="">Occupation</label>
-          <input class="input" type="text">
-        </span>
-
-        <span class="col-6">
-          <label for="">Birthplace</label>
-          <input class="input" type="text" name="" value="" placeholder="">
-        </span>
-
-        <span class="col-3">
-          <label for="">Birthdate</label>
-          <input class="input" type="date">
-        </span>
-
-        <span class="col-3">
-          <label for="">Religion</label>
-          <input class="input" type="text">
-        </span>
-
-        <span class="col-9">
-          <label for="">Address</label>
-          <input class="input" type="text" placeholder="House no. Street, City/ Municipality, Province, Country">
-        </span>
-
-        <span class="col-3">
-          <label for="">Citizenship</label>
-          <input class="input" type="text">
-        </span>
-      </div>
-
-      <h3 class="heading3">Father</h3>
-
-      <div class="row-flex">
-        <span class="col-6">
+          <input class="input" type="text" disabled>
           <label for="">Name</label>
-          <input class="input" type="text" placeholder="Surname, Firstname M.I">
-        </span>
-
-        <span class="col-3">
-          <label for="">Telephone No.</label>
-          <input class="input" type="number">
-        </span>
-
-        <span class="col-3">
-          <label for="">Occupation</label>
-          <input class="input" type="text">
-        </span>
-
-        <span class="col-6">
-          <label for="">Birthplace</label>
-          <input class="input" type="text" name="" value="" placeholder="">
-        </span>
-
-        <span class="col-3">
-          <label for="">Birthdate</label>
-          <input class="input" type="date">
-        </span>
-
-        <span class="col-3">
-          <label for="">Religion</label>
-          <input class="input" type="text">
-        </span>
-
-        <span class="col-9">
-          <label for="">Address</label>
-          <input class="input" type="text" placeholder="House no. Street, City/ Municipality, Province, Country">
-        </span>
-
-        <span class="col-3">
-          <label for="">Citizenship</label>
-          <input class="input" type="text">
-        </span>
-      </div>
-
-      <div class="center-horizontal col-4">
-        <label for="">Date of Marriage</label>
-        <input class="input" type="date">
-      </div>
-
-      <div class="sponsor">
-        <h3 class="heading2">Sponsors</h3>
-
-        <h4 class="heading3">Main Sponsor</h4>
-        <div class="row">
-
-          <div class="sponsor-form">
-            <h5 class="heading4">Male Sponsor</h5>
-            <label for="name">Name</label>
-            <input class="input" type="text" id="name" name="name" placeholder="Surname, Name, M.I.">
-          </div>
-
-          <div class="sponsor-form">
-            <h5 class="heading4">Female Sponsor</h5>
-            <label for="name">Name</label>
-            <input class="input" type="text" id="name" name="name" placeholder="Surname, Name, M.I.">
-          </div>
+          <input class="input" type="text" disabled>
         </div>
 
-        <hr>
-
-        <h4 class="heading3">Other Sponsors</h4>
-
-        <div class="row">
-          <div class="sponsor-form">
-            <label for="">Name</label>
-            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-            <label for="">Name</label>
-            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-            <label for="">Name</label>
-            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-            <label for="">Name</label>
-            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-          </div>
-
-          <div class="sponsor-form">
-            <label for="">Name</label>
-            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-            <label for="">Name</label>
-            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-            <label for="">Name</label>
-            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-            <label for="">Name</label>
-            <input class="input" type="text" name="" value="" placeholder="Surname, Name, M.I.">
-          </div>
+        <div class="sponsor-form">
+          <label for="">Name</label>
+          <input class="input" type="text" disabled>
+          <label for="">Name</label>
+          <input class="input" type="text" disabled>
+          <label for="">Name</label>
+          <input class="input" type="text" disabled>
+          <label for="">Name</label>
+          <input class="input" type="text" disabled>
         </div>
       </div>
+    </div>
 
-    </form>
   </main>
 
   <!-- Font Awesome -->
