--- a/html/events/details/marriage.html
+++ b/html/events/details/marriage.html
@@ -24,7 +24,7 @@
     <nav class="navbar">
       <div class="navbar-brand">
         <img class="navbar-brand-logo" src="../../../images/logo.png" alt="Web application logo">
-        <h1 class="navbar-brand-text">Church</h1>
+        <h1 class="navbar-brand-text">Catholic Church Complex</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -54,162 +54,160 @@
       </div>
     </header>
 
-    <form class="form-container" method="post" id="marriageDetails">
 
-      <div class="row-flex">
-        <span class="col-9">
-          <label for="">Church Name</label>
-          <input class="input" type="text">
-        </span>
+    <div class="row-flex">
+      <span class="col-9">
+        <label for="">Church Name</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-3">
-          <label for="">Registry No.</label>
-          <input class="input" type="text">
-        </span>
+      <span class="col-3">
+        <label for="">Registry No.</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-9">
-          <label for="">Location</label>
-          <input class="input" type="text" name="" value="" placeholder="">
-        </span>
+      <span class="col-9">
+        <label for="">Location</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-3">
-          <label for="">Date</label>
-          <input class="input" type="date" name="" value="" placeholder="">
-        </span>
+      <span class="col-3">
+        <label for="">Date</label>
+        <input class="input" type="date" disabled>
+      </span>
 
-        <span class="col-6">
-          <label for="">Organizer</label>
-          <input class="input" type="text" name="" value="" placeholder="">
-        </span>
+      <span class="col-6">
+        <label for="">Organizer</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-3">
-          <label for="">Contact No.</label>
-          <input class="input" type="text" name="" value="">
-        </span>
+      <span class="col-3">
+        <label for="">Contact No.</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-3">
-          <label for="">Time</label>
-          <input class="input" type="time" name="">
-        </span>
+      <span class="col-3">
+        <label for="">Time</label>
+        <input class="input" type="time" disabled>
+      </span>
 
-      </div>
+    </div>
 
-      <hr>
+    <hr>
 
-      <h3 class="heading3">Groom</h3>
+    <h3 class="heading3">Groom</h3>
 
-      <div class="row-flex">
-        <span class="col-9">
-          <label for="">Name</label>
-          <input class="input" type="text" placeholder="Surname, Firstname M.I">
-        </span>
+    <div class="row-flex">
+      <span class="col-9">
+        <label for="">Name</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-3">
-          <label for="">Telephone No.</label>
-          <input class="input" type="text">
-        </span>
+      <span class="col-3">
+        <label for="">Telephone No.</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-9">
-          <label for="">Address</label>
-          <input class="input" type="text">
-        </span>
+      <span class="col-9">
+        <label for="">Address</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-3">
-          <label for="">Occupation</label>
-          <input class="input" type="text">
-        </span>
+      <span class="col-3">
+        <label for="">Occupation</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-9">
-          <label for="">Place of Birth</label>
-          <input class="input" type="text">
-        </span>
+      <span class="col-9">
+        <label for="">Place of Birth</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-3">
-          <label for="">Date of Birth</label>
-          <input class="input" type="date">
-        </span>
+      <span class="col-3">
+        <label for="">Date of Birth</label>
+        <input class="input" type="date" disabled>
+      </span>
 
-        <span class="col-4">
-          <label for="">Religion</label>
-          <input class="input" type="text" name="" value="" placeholder="">
-        </span>
+      <span class="col-4">
+        <label for="">Religion</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-4">
-          <label for="">Citizenship</label>
-          <input class="input" type="text" name="" value="" placeholder="">
-        </span>
+      <span class="col-4">
+        <label for="">Citizenship</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-4">
-          <label for="civilStatus">Civil Status</label>
-          <div class="select-wrapper">
-            <select class="input select" id="civilStatus">
-              <option disabled selected>Select Status</option>
-              <option>Single</option>
-              <option>Married</option>
-              <option>Divorced</option>
-              <option>Widowed</option>
-            </select>
-          </div>
-        </span>
-      </div>
+      <span class="col-4">
+        <label for="civilStatus">Civil Status</label>
+        <div class="select-wrapper">
+          <select class="input select" id="civilStatus" disabled>
+            <option disabled selected>Select Status</option>
+            <option>Single</option>
+            <option>Married</option>
+            <option>Divorced</option>
+            <option>Widowed</option>
+          </select>
+        </div>
+      </span>
+    </div>
 
-      <h3 class="heading3">Bride</h3>
+    <h3 class="heading3">Bride</h3>
 
-      <div class="row-flex">
-        <span class="col-9">
-          <label for="">Name</label>
-          <input class="input" type="text" placeholder="Surname, Firstname M.I">
-        </span>
+    <div class="row-flex">
+      <span class="col-9">
+        <label for="">Name</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-3">
-          <label for="">Telephone No.</label>
-          <input class="input" type="text">
-        </span>
+      <span class="col-3">
+        <label for="">Telephone No.</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-9">
-          <label for="">Address</label>
-          <input class="input" type="text">
-        </span>
+      <span class="col-9">
+        <label for="">Address</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-3">
-          <label for="">Occupation</label>
-          <input class="input" type="text">
-        </span>
+      <span class="col-3">
+        <label for="">Occupation</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-9">
-          <label for="">Place of Birth</label>
-          <input class="input" type="text">
-        </span>
+      <span class="col-9">
+        <label for="">Place of Birth</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-3">
-          <label for="">Date of Birth</label>
-          <input class="input" type="date">
-        </span>
+      <span class="col-3">
+        <label for="">Date of Birth</label>
+        <input class="input" type="date" disabled>
+      </span>
 
-        <span class="col-4">
-          <label for="">Religion</label>
-          <input class="input" type="text" name="" value="" placeholder="">
-        </span>
+      <span class="col-4">
+        <label for="">Religion</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-4">
-          <label for="">Citizenship</label>
-          <input class="input" type="text" name="" value="" placeholder="">
-        </span>
+      <span class="col-4">
+        <label for="">Citizenship</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-        <span class="col-4">
-          <label for="civilStatus">Civil Status</label>
-          <div class="select-wrapper">
-            <select class="input select" id="civilStatus">
-              <option disabled selected>Select Status</option>
-              <option>Single</option>
-              <option>Married</option>
-              <option>Divorced</option>
-              <option>Widowed</option>
-            </select>
-          </div>
-        </span>
-      </div>
-    </form>
+      <span class="col-4">
+        <label for="civilStatus">Civil Status</label>
+        <div class="select-wrapper">
+          <select class="input select" id="civilStatus" disabled>
+            <option disabled selected>Select Status</option>
+            <option>Single</option>
+            <option>Married</option>
+            <option>Divorced</option>
+            <option>Widowed</option>
+          </select>
+        </div>
+      </span>
+    </div>
   </main>
 
   <!-- Font Awesome -->
