--- a/html/events/details/practice.html
+++ b/html/events/details/practice.html
@@ -24,7 +24,7 @@
     <nav class="navbar">
       <div class="navbar-brand">
         <img class="navbar-brand-logo" src="../../../images/logo.png" alt="Web application logo">
-        <h1 class="navbar-brand-text">Church</h1>
+        <h1 class="navbar-brand-text">Catholic Church Complex</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -48,66 +48,63 @@
 
   <main class="content details-page">
 
-    <div>
-      <header class="section-header">
-        <h2 class="section-heading">Practice | Name</h2>
-        <hr>
-      </header>
+    <header class="section-header">
+      <h2 class="section-heading">Practice | Name</h2>
+      <hr>
+    </header>
 
-      <form class="form-container" action="" method="post" id="practiceDetails">
-        <div class="row-flex">
-          <span class="col-8">
-            <label label for="">Practice Title</label>
-            <input class="input" type="text" name="" value="" placeholder="Insert event name">
-          </span>
+    <div class="row-flex">
+      <span class="col-8">
+        <label label for="">Practice Title</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-          <span class="col-4">
-            <label>Registry Number</label>
-            <input class="input" type="number" placeholder="Enter contact number" required>
-          </span>
+      <span class="col-4">
+        <label>Registry Number</label>
+        <input class="input" type="number" disabled>
+      </span>
 
-          <span class="col-12">
-            <label label for="">Location</label>
-            <input class="input" type="text" name="" value="" placeholder="Insert location here">
-          </span>
+      <span class="col-12">
+        <label label for="">Location</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-          <span class="col-8">
-            <label label for="">Host's Name</label>
-            <input class="input" type="text" name="" value="" placeholder="Insert organizer's name here">
-          </span>
+      <span class="col-8">
+        <label label for="">Host's Name</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-          <span class="col-4">
-            <label>Contact Number</label>
-            <input class="input" type="number" placeholder="Enter contact number" required>
-          </span>
+      <span class="col-4">
+        <label>Contact Number</label>
+        <input class="input" type="number" disabled>
+      </span>
 
-          <span class="col-9">
-            <label>Practice Purpose and Needs</label>
-            <textarea class="input textarea" name="name" rows="10"></textarea>
-          </span>
+      <span class="col-9">
+        <label>Practice Purpose and Needs</label>
+        <textarea class="input textarea" name="name" rows="10" disabled></textarea>
+      </span>
 
-          <span class="col-3">
-            <span>
-              <label>Time</label>
-              <input class="input" type="Time" required>
-            </span>
+      <span class="col-3">
+        <span>
+          <label>Time</label>
+          <input class="input" type="Time" disabled>
+        </span>
 
-            <span>
-              <label>Date</label>
-              <input class="input" type="date" required>
-            </span>
-          </span>
+        <span>
+          <label>Date</label>
+          <input class="input" type="date" disabled>
+        </span>
+      </span>
 
-        </div>
-
-      </form>
     </div>
 
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
+  </main>
 
-    <!-- Functionality -->
-    <script type="text/javascript" src="../../../js/index.js"></script>
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
+
+  <!-- Functionality -->
+  <script type="text/javascript" src="../../../js/index.js"></script>
 </body>
 
 </html>
