--- a/html/events/details/prayer.html
+++ b/html/events/details/prayer.html
@@ -24,7 +24,7 @@
     <nav class="navbar">
       <div class="navbar-brand">
         <img class="navbar-brand-logo" src="../../../images/logo.png" alt="Web application logo">
-        <h1 class="navbar-brand-text">Church</h1>
+        <h1 class="navbar-brand-text">Catholic Church Complex</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -47,58 +47,55 @@
   </section>
 
   <main class="content details-page">
-    <div>
-      <header class="section-header">
-        <h2 class="section-heading">Prayer Meeting | Title</h2>
-        <hr>
-      </header>
 
-      <form method="post" id="prayerDetails">
+    <header class="section-header">
+      <h2 class="section-heading">Prayer Meeting | Title</h2>
+      <hr>
+    </header>
 
-        <div class="row-flex">
-          <span class="col-9">
-            <label label for="">Location</label>
-            <input class="input" type="text">
-          </span>
+    <div class="row-flex">
+      <span class="col-9">
+        <label label for="">Location</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-          <span class="col-3">
-            <label label for="">Registry Number</label>
-            <input class="input" type="number">
-          </span>
+      <span class="col-3">
+        <label label for="">Registry Number</label>
+        <input class="input" type="number" disabled>
+      </span>
 
-          <span class="col-9">
-            <label label for="">Host Name</label>
-            <input class="input" type="text">
-          </span>
+      <span class="col-9">
+        <label label for="">Host Name</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-          <span class="col-3">
-            <label label for="">Contact Number</label>
-            <input class="input" type="number">
-          </span>
+      <span class="col-3">
+        <label label for="">Contact Number</label>
+        <input class="input" type="number" disabled>
+      </span>
 
-          <span class="col-6">
-            <label label for="">Stream Link</label>
-            <input class="input" type="text">
-          </span>
+      <span class="col-6">
+        <label label for="">Stream Link</label>
+        <input class="input" type="text" disabled>
+      </span>
 
-          <span class="col-3">
-            <label label for="">Time</label>
-            <input class="input" type="time">
-          </span>
+      <span class="col-3">
+        <label label for="">Time</label>
+        <input class="input" type="time" disabled>
+      </span>
 
-          <span class="col-3">
-            <label label for="">Date</label>
-            <input class="input" type="date">
-          </span>
-        </div>
-
-        <label label for="">Title</label>
-        <textarea class="input textarea" rows="3"></textarea>
-
-        <label label for="">Prayer Purpose and Needs</label>
-        <textarea class="input textarea" rows="3"></textarea>
-      </form>
+      <span class="col-3">
+        <label label for="">Date</label>
+        <input class="input" type="date" disabled>
+      </span>
     </div>
+
+    <label label for="">Title</label>
+    <textarea class="input textarea" rows="4" disabled></textarea>
+
+    <label label for="">Prayer Purpose and Needs</label>
+    <textarea class="input textarea" rows="4" disabled></textarea>
+
   </main>
 
   <!-- Font Awesome -->
