--- a/html/events/forms/marriage.html
+++ b/html/events/forms/marriage.html
@@ -24,7 +24,7 @@
     <nav class="navbar">
       <div class="navbar-brand">
         <img class="navbar-brand-logo" src="../../../images/logo.png" alt="Web application logo">
-        <h1 class="navbar-brand-text">Church</h1>
+        <h1 class="navbar-brand-text">Catholic Church Complex</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -47,6 +47,7 @@
   </section>
 
   <main class="content form-page">
+
     <div>
       <header class="section-header">
         <h2 class="section-heading">Schedule a Wedding</h2>
@@ -209,6 +210,8 @@
       <button class="btn btn-outline btn-secondary invisible" id="slidePrev">Back</button>
       <button class="btn" id="slideNext">Next</button>
     </div>
+
+  </main>
 
 
     <!-- Font Awesome -->
