--- a/html/events/forms/anniversary.html
+++ b/html/events/forms/anniversary.html
@@ -24,7 +24,7 @@
     <nav class="navbar">
       <div class="navbar-brand">
         <img class="navbar-brand-logo" src="../../../images/logo.png" alt="Web application logo">
-        <h1 class="navbar-brand-text">Church</h1>
+        <h1 class="navbar-brand-text">Catholic Church Complex</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -47,6 +47,7 @@
   </section>
 
   <main class="content form-page">
+
     <div>
       <header class="section-header">
         <h2 class="section-heading">Schedule Anniversary</h2>
@@ -64,7 +65,7 @@
         <div class="row-flex">
           <span class="col-8">
             <label for="">Organizer</label>
-            <input class="input" type="text">
+            <input class="input" type="text" required>
           </span>
 
           <span class="col-4">
@@ -74,7 +75,7 @@
         </div>
 
         <label>Description</label>
-        <textarea class="input textarea" name="name" rows="8"></textarea>
+        <textarea class="input textarea" name="name" rows="8" required></textarea>
 
       </form>
     </div>
@@ -84,12 +85,14 @@
       <a class="btn-secondary col-5" href="../index.html">Cancel</a>
     </div>
 
+  </main>
 
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
 
-    <!-- Functionality -->
-    <script type="text/javascript" src="../../../js/index.js"></script>
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
+
+  <!-- Functionality -->
+  <script type="text/javascript" src="../../../js/index.js"></script>
 </body>
 
 </html>
